Fix for column spacing

--- a/src/assets/styles/sections/index/_team.scss
+++ b/src/assets/styles/sections/index/_team.scss
@@ -1,6 +1,7 @@
 // Team
 .team {
-  background: $patternLines, radial-gradient(circle 700px at 100% 100%, $charcoal-grey, $dark-navy-blue);
+  background: $patternLines,
+    radial-gradient(circle 700px at 100% 100%, $charcoal-grey, $dark-navy-blue);
   transition: $transition25;
   position: relative;
   margin-top: -140px;
@@ -22,7 +23,7 @@
   margin-top: 10px;
 }
 .team__members {
-  @include isFlex(flex-start, space-between);
+  @include isFlex(flex-start);
 }
 .team__members {
   margin-top: 80px;
@@ -50,7 +51,10 @@
     left: -45px;
     width: 180px;
     height: 180px;
-    background-image: radial-gradient(rgba(255, 255, 255, 0.25) 1px, transparent 1px),
+    background-image: radial-gradient(
+        rgba(255, 255, 255, 0.25) 1px,
+        transparent 1px
+      ),
       radial-gradient(rgba(255, 255, 255, 0.25) 1px, transparent 1px);
     background-size: 20px 20px;
     z-index: -1;
